# valori

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements-parsing.txt  requirements.txt  setup.cfg  setup.py
.github/workflows/: ci.yml  publish.yml  tests.yml
docs/: Makefile  api.rst  conf.py  getting_started.rst  index.rst  quickstart.rst
examples/: __init__.py  advanced_indexing.py  advanced_quantization.py  basic_usage.py  document_processing.py  easy_usage.py  production_setup.py
scripts/: benchmark.py  clean_dist.py  install_dev.sh  release.py  run_tests.sh
src/valori/: __init__.py  base.py  client.py  configs.py  exceptions.py  factory.py
src/valori/indices/: __init__.py  annoy.py  base.py  flat.py  hnsw.py  ivf.py  lsh.py
src/valori/parsers/: __init__.py  base.py  docling_parser.py  llama_parser.py  office_parser.py  pdf_parser.py  registry.py  text_parser.py
src/valori/persistence/: __init__.py  base.py  incremental.py  tensor.py
src/valori/processors/: __init__.py  base.py  chunking.py  cleaning.py  embedding.py  pipeline.py
src/valori/quantization/: __init__.py  base.py  product.py  saq.py  scalar.py
src/valori/storage/: __init__.py  base.py  disk.py  hybrid.py  memory.py
src/valori/utils/: __init__.py  batch_manager.py  debugging.py  helpers.py  logging.py  similarity.py  validation.py
tests/: __init__.py  conftest.py  test_annoy_index.py  test_indices.py  test_integration.py  test_lsh_index.py  test_persistence.py  test_quantization.py  test_storage.py
