[metadata]
name = valori
version = 0.1.4
author = Varshith
author_email = varshith.gudur17@gmail.com
description = A high-performance vector database library for Python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/varshith-Git/valori
project_urls =
    Bug Tracker = https://github.com/varshith-Git/valori/issues
    Documentation = https://github.com/varshith-Git/valori
    Source Code = https://github.com/varshith-Git/valori
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Database
    Topic :: Software Development :: Libraries :: Python Modules

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    numpy>=1.21.0
    scikit-learn>=1.0.0
    scipy>=1.7.0
    psutil>=5.8.0
    PyYAML>=6.0

[options.packages.find]
where = src

[options.extras_require]
dev =
    pytest>=7.0.0
    pytest-cov>=4.0.0
    pytest-xdist>=3.0.0
    black>=23.0.0
    flake8>=6.0.0
    mypy>=1.0.0
    pre-commit>=3.0.0
    safety>=2.0.0
    bandit>=1.7.0
docs =
    sphinx>=7.0.0
    sphinx-rtd-theme>=1.0.0
benchmark =
    matplotlib>=3.7.0
    seaborn>=0.12.0
    pandas>=2.0.0
parsing =
    PyPDF2>=3.0.0
    python-docx>=0.8.11
    openpyxl>=3.1.0
    python-pptx>=0.6.21
    chardet>=5.0.0
    nltk>=3.8.0
    beautifulsoup4>=4.12.0
    sentence-transformers>=2.2.0

[options.entry_points]
console_scripts =
    valori-benchmark = scripts.benchmark:main

[options.package_data]
valori = py.typed

[flake8]
max-line-length = 88
extend-ignore = E203, W503, E501
exclude = .git,__pycache__,build,dist,*.egg-info,.venv,.env

[coverage:run]
source = valori
omit = */tests/*,*/test_*,*/__pycache__/*,*/venv/*,*/env/*

[coverage:report]
exclude_lines =
    pragma: no cover
    def __repr__
    if self.debug:
    if settings.DEBUG
    raise AssertionError
    raise NotImplementedError
    if 0:
    if __name__ == .__main__.:
    class .*\bProtocol\):
    @(abc\.)?abstractmethod

[mypy]
python_version = 3.8
warn_return_any = True
warn_unused_configs = True
disallow_untyped_defs = True
disallow_incomplete_defs = True
check_untyped_defs = True
disallow_untyped_decorators = True
no_implicit_optional = True
warn_redundant_casts = True
warn_unused_ignores = True
warn_no_return = True
warn_unreachable = True
strict_equality = True

[mypy-sklearn.*]
ignore_missing_imports = True

[mypy-numpy.*]
ignore_missing_imports = True

[mypy-scipy.*]
ignore_missing_imports = True

[mypy-psutil.*]
ignore_missing_imports = True